--- a/DFESW13-HolidayBookings/src/main/resources/application.properties
+++ b/DFESW13-HolidayBookings/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.h2.console.path=/h2
 spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.defer-datasource-initialization=true
